# challenge_mlops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/api/: main.py
src/models/: train.py
tests/: test_api.py  test_core_ml.py
