[project]
name = "challenge-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "mhgualdron",email = "mhernandezgualdron@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (>=3.8.1,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "kagglehub[pandas-dataframe] (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
